macro (do_test test result)
    add_executable(${test} ${test}.c)
    target_link_libraries(${test} uthread)
    add_test(${test} ${test})
    set_tests_properties(${test} PROPERTIES PASS_REGULAR_EXPRESSION ${result})
endmacro (do_test)

do_test (stress "1023")
do_test (detach "2046")
do_test (argument "522753")
do_test (exit "523776")
do_test (equal "1001")
do_test (cancel1 "1023")
do_test (cancel2 "-16 1023")
do_test (yield "2046")
do_test (mutex "102400000000")
do_test (condvar "1999000")
do_test (sem "9900")
do_test (philosopher "1000")
